test allocation